bootstrap/gitea/git-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-git
  namespace: gitea
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.18.255.209
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
